objects/Business_Rule_Validation_Log__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>BusinessRuleValidationLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Id</label>
        <referenceTo>SGRRenewalBatch__c</referenceTo>
        <relationshipLabel>Business Rule Validation Logs</relationshipLabel>
        <relationshipName>Business_Rule_Validation_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BusinessRuleId</label>
        <referenceTo>SGR_Business_Rule__c</referenceTo>
        <relationshipLabel>Business Rule Validation Logs</relationshipLabel>
        <relationshipName>Business_Rule_Validation_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fail_Pass_Reason__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impacted_Team__c</fullName>
        <formula>IF(INCLUDES(BusinessRuleId__r.Impacted__c,&apos;SAM&apos;),&apos;SAM; &apos;,NULL)+&apos;&apos; + 
IF(INCLUDES(BusinessRuleId__r.Impacted__c,&apos;Operations&apos;),&apos;Operations; &apos;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impacted Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpportunityId</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>BusinessRuleValidationLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Batch_Oppty_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Batch Oppty Id</label>
        <referenceTo>SGR_Renewal_Batch_Oppty__c</referenceTo>
        <relationshipName>BusinessRuleValidationLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Instruction__c</fullName>
        <formula>BusinessRuleId__r.Resolution_Instruction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Instruction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Description__c</fullName>
        <formula>BusinessRuleId__r.Rule_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_ID__c</fullName>
        <formula>BusinessRuleId__r.Rule_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <formula>IF(BusinessRuleId__r.Rule_Type__c == &apos;Error&apos;, &apos;E&apos; ,&apos;W&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGR_caseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Business Rule Validation Logs</relationshipLabel>
        <relationshipName>Business_Rule_Validation_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business Rule Validation Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OpportunityId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>BusinessRuleId__c</columns>
        <columns>Status__c</columns>
        <columns>Fail_Pass_Reason__c</columns>
        <columns>AccountId__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BRV-{0000}</displayFormat>
        <label>Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Rule Validation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>